--- a/login.html
+++ b/login.html
@@ -7,135 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Volunteer NG | Login</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/pages/index.css" />
     <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
     <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
     <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
-    <link rel="stylesheet" href="./team/team.css" />
 
+    <link rel="icon" href="images/favicon.png" sizes="16x16" type="image/png" />
+    <title>Volunteer NG | Login</title>
 </head>
 
 <body class="moving-volunteer">
-    <!-- Top Header -->
-    <div class="topmost-nav">
-        <div class="left col-3">
-            <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-            <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-            <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-            <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-        </div>
-        <div class="right col-6">
-            <a href="tel:7071234567"><i class="fa fa-phone"></i> +234 7071234567</a>
-            <a href="mailto:volunteerng@gmail.com"><i class="fa fa-envelope"></i> volunteerng@gmail.com</a>
-        </div>
-    </div>
-
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div id="branding">
-                <img src="images/logo.png" width="120" height="70" />
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="entities.html">Entities</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="team/team.html">The Team</a></li>
-                    <li class="auth_button">
-                        <a class="current" href="login.html"> <i class="fa fa-user"></i> Login</a>
-                    </li>
-                    <li class="auth_button">
-                        <a href="signup.html">
-                            <i class="fa fa-person-booth"></i> Sign Up</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
     <div class="container">
-        <!--Login Form-->
-        <div class="container">
-            <div class="form">
 
-                <ul class="tab-group">
-                    <li class="tab"><a href="#signup">Sign Up</a></li>
-                    <li class="tab active"><a href="#login">Log In</a></li>
-                </ul>
-
-                <div class="tab-content">
-
-                    <div id="login">
-                        <h1>Welcome Back!</h1>
-
-                        <form action="login.html" method="post" autocomplete="off">
-
-                            <div class="field-wrap">
-                                <label>
-                                    Email Address<span class="req">*</span>
-                                </label>
-                                <input type="email" required autocomplete="off" name="email" />
-                            </div>
-
-                            <div class="field-wrap">
-                                <label>
-                                    Password<span class="req">*</span>
-                                </label>
-                                <input type="password" required autocomplete="off" name="password" />
-                            </div>
-
-                            <p class="forgot"><a href="forgot.php">Forgot Password?</a></p>
-
-                            <button class="button button-block" name="login">Log In</button>
-
-                        </form>
-
-                    </div>
-                    <div id="signup">
-                        <div class="top-row"></div>
-                        <div class="firstContainer">
-                            <h1>Welcome to <span>VOLUNTEER.NG</span></h1>
-                            <div>
-                                <hr class="horizontalLine">
-                            </div>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                suffered
-                                alteration in some form, by injected humour randomised words which don't look even
-                                slightly believeable.
-                            </p>
-                        </div>
-                        <div class="secondContainer">
-                            <h2>Create an account</h2>
-                            <hr class="horizontalLine2">
-                            <p>Don't have an account? It takes less than a minute. If you already have an account <a
-                                    href="login.html">Login.</a></p>
-                            <form action="">
-                                <input type="text" placeholder="Full Name" required>
-                                <input type="email" placeholder="Email address" required>
-                                <input type="password" placeholder="Password" required>
-                                <input type="password" placeholder="Re-enter Password" required>
-                                <input type="text" placeholder="Title" required>
-                                <input type="text" placeholder="About what you want" required>
-                                <input type="text" placeholder="Amount" required>
-
-                                <button type="submit">CREATE ACCOUNT</button>
-                            </form>
-                        </div>
-                    </div>
-                </div><!-- tab-content -->
-
-            </div> <!-- /form -->
-        </div>
-
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-        <script src="js/index.js"></script>
-
-        <button type="submit">LOGIN</button>
-        </form>
     </div>
     </div>
+
+    <body>
+
+    </body>
 
 </html>
