--- a/sign-in.html
+++ b/sign-in.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="./css/sign-in.css">
 <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
 
-<body class=" moving-volunteer">
+<body>
 
     <head>
         <div class="container" id="container">
