--- a/team.html
+++ b/team.html
@@ -5,36 +5,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="./css/pages/index.css" />
+  <title>Volunteer NG | The Team</title>
   <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
   <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
   <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
-  <link rel="icon" href="images/favicon.png" sizes="16x16" type="image/png" />
-  <title>VolunteerNG | Our Team</title>
+  <link rel="icon" href="./images/favicon.ico" sizes="16x16" type="image/png" />
+  <link rel="stylesheet" href="./css/team.css" />
 </head>
 
 <body>
-  <!-- Top Header -->
-  <div class="top-header">
-    <div class="container">
-      <div id="branding">
-        <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-        <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-        <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-        <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-      </div>
-      <nav>
-        <ul>
-          <li class="current"><i class="fa fa-phone"></i> +234 7071234567</li>
-          <li><i class="fa fa-envelope"></i> volunteerng@gmail.com</li>
-        </ul>
-      </nav>
+  <!-- Top-Most Nav Starts Here -->
+  <div class="topmost-nav">
+    <div class="left col-3">
+      <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
+      <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
+      <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
+      <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
     </div>
-  </div>
-  <div class="right col-6">
-    <a href="tel:7071234567"><i class="fa fa-phone"></i> +234 7071234567</a>
-    <a href="mailto:volunteerng@gmail.com"><i class="fa fa-envelope"></i> volunteerng@gmail.com</a>
-  </div>
+    <div class="right col-6">
+      <a href="tel:7071234567"><i class="fa fa-phone"></i> +234 7071234567</a>
+      <a href="mailto:volunteerng@gmail.com"><i class="fa fa-envelope"></i> volunteerng@gmail.com</a>
+    </div>
   </div>
 
   <!-- Top-Most Nav Starts Here -->
@@ -48,14 +39,14 @@
       <nav col-6>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="entities.html">Entities</a></li>
+          <li><a href="entities.php">Entities</a></li>
           <li><a href="about.html">About</a></li>
           <li class="current"><a href="team.html">The Team</a></li>
           <li class="auth_button">
-            <a href="login.html"> <i class="fa fa-user"></i> Login</a>
+            <a href="login.php"> <i class="fa fa-user"></i> Login</a>
           </li>
           <li class="auth_button">
-            <a href="signup.html">
+            <a href="signup.php">
               <i class="fa fa-person-booth"></i> Sign Up</a>
           </li>
         </ul>
@@ -120,87 +111,11 @@
             <span class="submit"><i class="fas fa-arrow-right"></i></span>
           </form>
         </div>
-    </header>
-
-    <section id="team-header">
-        <h1>Our Team</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quia, possimus amet iure, aliquam soluta
-            mollitia quasi animi illo, officiis corporis perferendis reprehenderit neque sit delectus dolores laborum
-            ipsa eaque nobis inventore architecto obcaecati? Ratione, placeat magni. Error tempora iste voluptate
-            sapiente architecto. Earum voluptatibus esse amet voluptate saepe repellat.</p>
-    </section>
-
-    <section id="teams">
-        <div class="container">
-            <div class="member">
-                <img src="./images/disaster.jpg" /> <br />
-                <h3>Lizy Agunbide</h3>
-                <p>
-                    Team Member <br><br>
-                    Project Role: Back End Developer
-                </p>
-                <br>
-                <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-            </div>
-
-            <div class="member">
-                <img src="./images/disaster.jpg" /> <br />
-                <h3>Lizy Agunbide</h3>
-                <p>
-                    Team Member <br><br>
-                    Project Role: Back End Developer
-                </p>
-                <br>
-                <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-            </div>
-
-            <div class="member">
-                <img src="./images/disaster.jpg" /> <br />
-                <h3>Lizy Agunbide</h3>
-                <p>
-                    Team Member <br><br>
-                    Project Role: Back End Developer
-                </p>
-                <br>
-                <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-            </div>
-
-            <div class="member">
-                <img src="./images/disaster.jpg" /> <br />
-                <h3>Lizy Agunbide</h3>
-                <p>
-                    Team Member <br><br>
-                    Project Role: Back End Developer
-                </p>
-                <br>
-                <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-            </div>
-
-            <div class="member">
-                <img src="./images/disaster.jpg" /> <br />
-                <h3>Lizy Agunbide</h3>
-                <p>
-                    Team Member <br><br>
-                    Project Role: Back End Developer
-                </p>
-                <br>
-                <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-            </div>
+        <div class="inline">
+          <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp;
+          <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp;
+          <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp;
+          <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp;
         </div>
       </div>
     </div>
